unpackaged/main/default/objects/Implementation__c/fields/Allow_Case_Routing__c.field-meta.xml
<CustomField>
    <fullName>Allow_Case_Routing__c</fullName>
    <description>Checkbox formula field to be true if on or after Allow Case Routing Date</description>
    <formula>TODAY() &gt;=  Allow_Case_Routing_Date__c</formula>
    <label>Allow Case Routing</label>
    <type>Checkbox</type>
</CustomField>