unpackaged/main/default/objects/Implementation__c/fields/Allow_Case_Routing_Date__c.field-meta.xml
<CustomField>
    <fullName>Allow_Case_Routing_Date__c</fullName>
    <description>Formula field to be T-35 days before Go-Live (from contract)</description>
    <formula>Contract__r.Go_Live_Date__c - 35</formula>
    <label>Allow Case Routing Date</label>
    <type>Date</type>
</CustomField>