unpackaged/main/default/objects/Implementation__c/fields/Allow_Letters__c.field-meta.xml
<CustomField>
    <fullName>Allow_Letters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Letters</label>
    <type>Checkbox</type>
</CustomField>