unpackaged/main/default/objects/Implementation__c/fields/Allow_MBR_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Allow_MBR_Outreach__c</fullName>
    <description>Checkbox formula field to be true if on or after Allow Member Outreach</description>
    <formula>TODAY() &gt;=  Allow_MBR_Outreach_Date__c</formula>
    <label>Allow MBR Outreach</label>
    <type>Checkbox</type>
</CustomField>