unpackaged/main/default/objects/Implementation__c/fields/Allow_MBR_Outreach_Date__c.field-meta.xml
<CustomField>
    <fullName>Allow_MBR_Outreach_Date__c</fullName>
    <description>Formula field to be T-30 days before Go-Live (from Contract)</description>
    <formula>Contract__r.Go_Live_Date__c - 30</formula>
    <label>Allow MBR Outreach Date</label>
    <type>Date</type>
</CustomField>