unpackaged/main/default/objects/Implementation__c/fields/CSA_Loaded__c.field-meta.xml
<CustomField>
    <fullName>CSA_Loaded__c</fullName>
    <label>CSA Loaded</label>
    <type>Date</type>
</CustomField>