unpackaged/main/default/objects/Implementation__c/fields/CSA_Received__c.field-meta.xml
<CustomField>
    <fullName>CSA_Received__c</fullName>
    <label>CSA Received</label>
    <type>Date</type>
</CustomField>