unpackaged/main/default/objects/Implementation__c/fields/CSA_Required__c.field-meta.xml
<CustomField>
    <fullName>CSA_Required__c</fullName>
    <formula>(Go_Live_Date__c)-55</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSA Required</label>
    <type>Date</type>
</CustomField>