unpackaged/main/default/objects/Implementation__c/fields/Days_Until_Go_Live__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Go_Live__c</fullName>
    <formula>Go_Live_Date__c - Today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until Go-Live</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>