unpackaged/main/default/objects/Implementation__c/fields/HC_Loaded__c.field-meta.xml
<CustomField>
    <fullName>HC_Loaded__c</fullName>
    <label>HC Loaded</label>
    <type>Date</type>
</CustomField>