unpackaged/main/default/objects/Implementation__c/fields/HC_Received__c.field-meta.xml
<CustomField>
    <fullName>HC_Received__c</fullName>
    <label>HC Received</label>
    <type>Date</type>
</CustomField>