unpackaged/main/default/objects/Implementation__c/fields/Health_Plan_AE__c.field-meta.xml
<CustomField>
    <fullName>Health_Plan_AE__c</fullName>
    <formula>(Account__r.Health_Plan_Account_Executive__r.FirstName)+ &quot; &quot;+(Account__r.Health_Plan_Account_Executive__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health Plan AE</label>
    <type>Text</type>
</CustomField>