unpackaged/main/default/objects/Implementation__c/fields/Health_Plan_AM__c.field-meta.xml
<CustomField>
    <fullName>Health_Plan_AM__c</fullName>
    <formula>(Account__r.Health_Plan_Account_Manager__r.FirstName)+&quot; &quot;+(Account__r.Health_Plan_Account_Manager__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health Plan AM</label>
    <type>Text</type>
</CustomField>