unpackaged/main/default/objects/Implementation__c/fields/HPA_Loaded__c.field-meta.xml
<CustomField>
    <fullName>HPA_Loaded__c</fullName>
    <label>HPA Loaded</label>
    <type>Date</type>
</CustomField>