unpackaged/main/default/objects/Implementation__c/fields/HPA_Received__c.field-meta.xml
<CustomField>
    <fullName>HPA_Received__c</fullName>
    <label>HPA Received</label>
    <type>Date</type>
</CustomField>