unpackaged/main/default/objects/Implementation__c/fields/HPA_Required__c.field-meta.xml
<CustomField>
    <fullName>HPA_Required__c</fullName>
    <formula>(Go_Live_Date__c)-55</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HPA Required</label>
    <type>Date</type>
</CustomField>