unpackaged/main/default/objects/Implementation__c/fields/Info_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>Info_Call_Completed__c</fullName>
    <label>Info Call Completed</label>
    <type>Date</type>
</CustomField>