unpackaged/main/default/objects/Implementation__c/fields/Info_Call_Declined__c.field-meta.xml
<CustomField>
    <fullName>Info_Call_Declined__c</fullName>
    <label>Info Call Declined</label>
    <type>Date</type>
</CustomField>