unpackaged/main/default/objects/Implementation__c/fields/Info_Call_Offer_Date__c.field-meta.xml
<CustomField>
    <fullName>Info_Call_Offer_Date__c</fullName>
    <label>Info Call Offer Date</label>
    <type>Date</type>
</CustomField>