unpackaged/main/default/objects/Implementation__c/fields/Info_Call_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Info_Call_Scheduled__c</fullName>
    <label>Info Call Scheduled</label>
    <type>Date</type>
</CustomField>