unpackaged/main/default/objects/Implementation__c/fields/Kickoff__c.field-meta.xml
<CustomField>
    <fullName>Kickoff__c</fullName>
    <label>Kickoff Call Completed</label>
    <type>Date</type>
</CustomField>