unpackaged/main/default/objects/Implementation__c/fields/Kickoff_Call_Declined__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_Call_Declined__c</fullName>
    <label>Kickoff Call Declined</label>
    <type>Date</type>
</CustomField>