unpackaged/main/default/objects/Implementation__c/fields/Kickoff_Call_Offer_Date__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_Call_Offer_Date__c</fullName>
    <label>Kickoff Call Offer Date</label>
    <type>Date</type>
</CustomField>