unpackaged/main/default/objects/Implementation__c/fields/Kickoff_Call_Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_Call_Scheduled__c</fullName>
    <label>Kickoff Call Scheduled</label>
    <type>Date</type>
</CustomField>