unpackaged/main/default/objects/Implementation__c/fields/Kickoff_Call_Status__c.field-meta.xml
<CustomField>
    <fullName>Kickoff_Call_Status__c</fullName>
    <label>Kickoff Call Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>