unpackaged/main/default/objects/Implementation__c/fields/Lag_Historical_PA_Status__c.field-meta.xml
<CustomField>
    <fullName>Lag_Historical_PA_Status__c</fullName>
    <label>Lag Historical PA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Needed</fullName>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Overdue Escalated</fullName>
            </value>
            <value>
                <fullName>Escalation Resolved</fullName>
            </value>
            <value>
                <fullName>Needs Validation</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>