unpackaged/main/default/objects/Implementation__c/fields/LHC_Loaded__c.field-meta.xml
<CustomField>
    <fullName>LHC_Loaded__c</fullName>
    <label>LHC Loaded</label>
    <type>Date</type>
</CustomField>