unpackaged/main/default/objects/Implementation__c/fields/LHC_Received__c.field-meta.xml
<CustomField>
    <fullName>LHC_Received__c</fullName>
    <label>LHC Received</label>
    <type>Date</type>
</CustomField>