unpackaged/main/default/objects/Implementation__c/fields/LPHA_Loaded__c.field-meta.xml
<CustomField>
    <fullName>LPHA_Loaded__c</fullName>
    <label>LPHA Loaded</label>
    <type>Date</type>
</CustomField>