unpackaged/main/default/objects/Implementation__c/fields/LPHA_Received__c.field-meta.xml
<CustomField>
    <fullName>LPHA_Received__c</fullName>
    <label>LPHA Received</label>
    <type>Date</type>
</CustomField>