unpackaged/main/default/objects/Implementation__c/fields/LPHA_Required__c.field-meta.xml
<CustomField>
    <fullName>LPHA_Required__c</fullName>
    <formula>(Go_Live_Date__c)-20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LPHA Required</label>
    <type>Date</type>
</CustomField>