unpackaged/main/default/objects/Implementation__c/fields/NSD_Name__c.field-meta.xml
<CustomField>
    <fullName>NSD_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NSD Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Implementations</relationshipLabel>
    <relationshipName>Implementations</relationshipName>
    <type>Lookup</type>
</CustomField>