unpackaged/main/default/objects/Implementation__c/fields/Outreach_Report_Required__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Report_Required__c</fullName>
    <formula>Go_Live_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outreach Report Required</label>
    <type>Date</type>
</CustomField>