unpackaged/main/default/objects/Implementation__c/fields/Outreach_Report_Sent__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Report_Sent__c</fullName>
    <label>Outreach Report Sent</label>
    <type>Date</type>
</CustomField>