unpackaged/main/default/objects/Implementation__c/fields/PowerBI_Required__c.field-meta.xml
<CustomField>
    <fullName>PowerBI_Required__c</fullName>
    <label>PowerBI Required</label>
    <type>Date</type>
</CustomField>