unpackaged/main/default/objects/Implementation__c/fields/PowerBI_Sent__c.field-meta.xml
<CustomField>
    <fullName>PowerBI_Sent__c</fullName>
    <label>PowerBI Sent</label>
    <type>Date</type>
</CustomField>