unpackaged/main/default/objects/Implementation__c/fields/PRx_AM__c.field-meta.xml
<CustomField>
    <fullName>PRx_AM__c</fullName>
    <formula>(Account__r.PRx_Account_Manager__r.FirstName)+&quot; &quot;+(Account__r.PRx_Account_Manager__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PRx AM</label>
    <type>Text</type>
</CustomField>