unpackaged/main/default/objects/Implementation__c/fields/Welcome_Email_Complete__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email_Complete__c</fullName>
    <label>Welcome Email Complete</label>
    <type>Date</type>
</CustomField>