unpackaged/main/default/objects/Implementation__c/fields/Welcome_Email_Send_by__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email_Send_by__c</fullName>
    <formula>(Contract__r.Go_Live_Date__c)-75</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Welcome Email Send by</label>
    <type>Date</type>
</CustomField>