unpackaged/main/default/objects/Implementation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Go_Live_Date__c</columns>
    <columns>Contract_Status__c</columns>
    <columns>PRx_AM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>